--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
         </div>
 
         <div id="content" style="background-color:#EEEEEE;height:1040px;width:1400px;float:left;">
-            <h1>人员列表</h1><br>
-            <h2>CN_CHENPI------创始人</h2><br>
-            <h2>SOAG-W------创始人</h2>
-            star_流星------成员<br>
-            阴霾------服务器大佬<br>
+            <h1>团队日志</h1><br>
+            2020/1/10--网站创建完毕
+            2020/1/10--计划项目1<br>
+            2020/1/10--升级网站<br>
+            2020/1/11--网站升级成功<br>
+            2020/1/11--项目1已计划2020/1/11<br>
+            2020/1/11--开始审核项目2<br>
+            2020/1/11--等待审核项目2<br>
+            2020/1/11--项目2由CN_NHENPI命名为“贝尔MC版”<br>
         </div>
 
         <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
