--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div id="content" style="background-color:#EEEEEE;height:1040px;width:1400px;float:left;">
             <h1>团队日志</h1><br>
-            2020/1/10--网站创建完毕
+            2020/1/10--网站创建完毕<br>
             2020/1/10--计划项目1<br>
             2020/1/10--升级网站<br>
             2020/1/11--网站升级成功<br>
