--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             2020/1/11--开始审核项目2<br>
             2020/1/11--等待审核项目2<br>
             2020/1/11--项目2由CN_NHENPI命名为“贝尔MC版”<br>
+            2020/1/11--取消项目2
         </div>
 
         <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
