--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
-            嘿嘿嘿嘿
+            CN_CHENPI管理维护
         </div>
 
     </div>
