--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             2020/1/11--等待审核项目2<br>
             2020/1/11--项目2由CN_NHENPI命名为“贝尔MC版”<br>
             2020/1/11--取消项目2<br>
-            2020/1/11--开始招人
+            2020/1/11--开始招人<br>
+            2020/1/11--spiritkaw1 抑郁 具体空间加入工作室<br>
         </div>
 
         <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
