--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<!--004-->>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -13,10 +14,10 @@
         </div>
 
         <div id="menu" style="background-color:#FFD700;height:150px;width:150px;float:left;">
-            <b><a href="https://shl17344533992.github.io/sg/">主页</a></b><br>
-            <a href="https://shl17344533992.github.io/sg2">人员列表</a><br>
-            <a href="https://shl17344533992.github.io/sg3">项目进度</a><br>
-            <a href="https://shl17344533992.github.io/sg4">团队日志</a><br>
+            <b><a href="https://shl17344533992.github.io/sg/">主页</a></b>
+            <a href="https://shl17344533992.github.io/sg2">人员列表</a>
+            <a href="https://shl17344533992.github.io/sg3">项目进度</a>
+            <a href="https://shl17344533992.github.io/sg4">团队日志</a>
         </div>
 
         <div id="content" style="background-color:#EEEEEE;height:1040px;width:1400px;float:left;">
