--- a/index.html
+++ b/index.html
@@ -1,35 +1,64 @@
-﻿<!--004-->
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en" >
 <head>
-    <meta charset="utf-8">
-    <title>曙光工作室</title>
+<meta charset="UTF-8">
+<title>Space 404</title>
+
+<link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
-    <div id="container" style="width:1080px">
+<div class="moon"></div>
+<div class="moon__crater moon__crater1"></div>
+<div class="moon__crater moon__crater2"></div>
+<div class="moon__crater moon__crater3"></div>
 
-        <div id="header" style="background-color:#00FFFF;">
-            <h1 style="margin-bottom: 0; ">曙光工作室</h1>
-        </div>
+<div class="star star1"></div>
+<div class="star star2"></div>
+<div class="star star3"></div>
+<div class="star star4"></div>
+<div class="star star5"></div>
 
-        <div id="menu" style="background-color:#FFD700;height:150px;width:150px;float:left;">
-            <b><a href="https://shl17344533992.github.io/sg/">主页</a></b>
-            <a href="https://shl17344533992.github.io/sg2">人员列表</a>
-            <a href="https://shl17344533992.github.io/sg3">项目进度</a>
-            <a href="https://shl17344533992.github.io/sg4">团队日志</a>
-        </div>
+<div class="error">
+  <div class="error__title">404</div>
+  <div class="error__subtitle">Hmmm...</div>
+  <div class="error__description">这个网页还未开发好请稍等....</div>
+  <button class="error__button error__button--active">返回首页</button>
+  <button class="error__button">联系我们</button>
+</div>
 
-        <div id="content" style="background-color:#EEEEEE;height:1040px;width:1400px;float:left;">
-            <h1>团队日志</h1><br>
-            <h1>404!!!!!!!!!!!!!!!!</h1>
-        </div>
+<div class="astronaut">
+  <div class="astronaut__backpack"></div>
+  <div class="astronaut__body"></div>
+  <div class="astronaut__body__chest"></div>
+  <div class="astronaut__arm-left1"></div>
+  <div class="astronaut__arm-left2"></div>
+  <div class="astronaut__arm-right1"></div>
+  <div class="astronaut__arm-right2"></div>
+  <div class="astronaut__arm-thumb-left"></div>
+  <div class="astronaut__arm-thumb-right"></div>
+  <div class="astronaut__leg-left"></div>
+  <div class="astronaut__leg-right"></div>
+  <div class="astronaut__foot-left"></div>
+  <div class="astronaut__foot-right"></div>
+  <div class="astronaut__wrist-left"></div>
+  <div class="astronaut__wrist-right"></div>
+  
+  <div class="astronaut__cord">
+    <canvas id="cord" height="500px" width="500px"></canvas>
+  </div>
+  
+  <div class="astronaut__head">
+    <canvas id="visor" width="60px" height="60px"></canvas>
+    <div class="astronaut__head-visor-flare1"></div>
+    <div class="astronaut__head-visor-flare2"></div>
+  </div>
+</div>
 
-        <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
-            CN_CHENPI管理维护
-        </div>
-
-    </div>
+<script  src="js/script.js"></script>
 
 </body>
 </html>
