--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="error__title">404</div>
   <div class="error__subtitle">Hmmm...</div>
   <div class="error__description">这个网页还未开发好请稍等....</div>
-  <button class="error__button error__button--active">返回首页</button>
+  <button class="error__button error__button--active"><a href="http://shl17344533992.github.io/sg/">返回首页</a></button>
   <button class="error__button">联系我们</button>
 </div>
 
